fix dark mode zoo css

--- a/tools/libertarian-zoo/zoo.css
+++ b/tools/libertarian-zoo/zoo.css
@@ -1,14 +1,30 @@
+@media (prefers-color-scheme: light) {
+  :root {
+    --card-bg: white;
+    --card-box-shadow: 0 2px 2px 0 rgba(60, 75, 100, 0.14),
+      0 3px 2px -1px rgba(60, 75, 100, 0.12),
+      1px 2px 4px 1px rgba(60, 75, 100, 0.2);
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --card-bg: #2d2d2d;
+    --card-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+      0 3px 2px -1px rgba(0, 0, 0, 0.12),
+      1px 2px 4px 1px rgba(0, 0, 0, 0.2);
+  }
+}
+
 article.card {
-  background: white;
+  background: var(--card-bg);
   min-height: 23em;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: start;
   border: 0;
-  box-shadow: 0 2px 2px 0 rgba(60, 75, 100, 0.14),
-    0 3px 2px -1px rgba(60, 75, 100, 0.12),
-    1px 2px 4px 1px rgba(60, 75, 100, 0.2);
+  box-shadow: var(--card-box-shadow);
   border-radius: 0.18rem;
 }
 
@@ -69,14 +85,9 @@ h3::before {
 .img-container {
   display: flex;
   justify-content: center;
-  background-color: lightgrey;
+  background-color: var(--card-bg);
   overflow: hidden;
   height: 400px;
-}
-
-.img-container.nota,
-.img-container.no-photo {
-  background-color: white;
 }
 
 .img-container img {
